[package]
name = "axhal"
version = "0.1.0"
edition = "2021"



[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "2.2"
static_assertions = "1.1.0"
aarch64-cpu = "9.3"
tock-registers = "0.8"

axlog = { path = "../axlog" }
axconfig = { path = "../axconfig" }
axalloc = { path = "../axalloc" }

page_table =        { path = "../../crates/page_table"}
page_table_entry =  { path = "../../crates/page_table_entry"}
memory_addr =       { path = "../../crates/memory_addr" }
arm_gic =           { path = "../../crates/arm_gic" }
arm_pl011 =         { path = "../../crates/arm_pl011" }
spinlock =          { path = "../../crates/spinlock" }
ratio =             { path = "../../crates/ratio" }
percpu =            { path = "../../crates/percpu" }
handler_table =     { path = "../../crates/handler_table" }
hypercraft =        { path = "../../crates/hypercraft" }
crate_interface =   { path = "../../crates/crate_interface" }