[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Runtime library of ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axruntime"
documentation = "https://rcore-os.github.io/arceos/axruntime/index.html"


[dependencies]
spin = "0.9"
bitflags = "1.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
percpu = { path = "../../crates/percpu" }
kernel_guard = { path = "../../crates/kernel_guard" }
spinlock = { path = "../../crates/spinlock" }
lazy_init = { path = "../../crates/lazy_init" }
crate_interface = { path = "../../crates/crate_interface" }
axalloc = { path = "../axalloc" }
axconfig = { path = "../axconfig" }


axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
hypercraft = { path = "../../crates/hypercraft" }
page_table = { path = "../../crates/page_table" }
page_table_entry = { path = "../../crates/page_table_entry", features = ["hv"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "11.0"
